[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Creation.gd" type="Script" id=1]
[ext_resource path="res://Extra Scenes/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Extra Scenes/Label.tscn" type="PackedScene" id=3]

[node name="Creation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
Butt = ExtResource( 2 )
Labell = ExtResource( 3 )

[node name="Saving Stuffs" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Checking" type="CheckBox" parent="Saving Stuffs"]
margin_left = 336.0
margin_top = 615.0
margin_right = 463.0
margin_bottom = 639.0
text = "Developer Save"

[node name="Save" type="Button" parent="Saving Stuffs"]
margin_left = 350.0
margin_top = 750.0
margin_right = 400.0
margin_bottom = 770.0
rect_scale = Vector2( 2, 2 )
text = "Save!"

[node name="Load" type="Button" parent="Saving Stuffs"]
margin_left = 350.0
margin_top = 700.0
margin_right = 400.0
margin_bottom = 720.0
rect_scale = Vector2( 2, 2 )
text = "Load!"

[node name="FileDialog" type="FileDialog" parent="Saving Stuffs"]
margin_left = 173.0
margin_top = 174.0
margin_right = 573.0
margin_bottom = 474.0
access = 1

[node name="FileDialog2" type="FileDialog" parent="Saving Stuffs"]
margin_left = 402.0
margin_top = 211.0
margin_right = 802.0
margin_bottom = 511.0
window_title = "Open a File"
mode = 0
access = 1

[node name="DeveloperFile" type="FileDialog" parent="Saving Stuffs"]
margin_left = 173.0
margin_top = 174.0
margin_right = 573.0
margin_bottom = 474.0
dialog_text = "Look at Pre-made Cards folder."

[node name="DeveloperFile2" type="FileDialog" parent="Saving Stuffs"]
margin_left = 402.0
margin_top = 211.0
margin_right = 802.0
margin_bottom = 511.0
window_title = "Open a File"
dialog_text = "Look at Pre-made Cards folder."
mode = 0

[node name="Quit" type="Button" parent="Saving Stuffs"]
margin_left = 342.0
margin_top = 650.0
margin_right = 399.0
margin_bottom = 670.0
rect_scale = Vector2( 2, 2 )
text = "QUIT!!!"

[node name="Group Stuff" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Delete Group" type="Button" parent="Group Stuff"]
margin_left = 330.0
margin_top = 75.0
margin_right = 487.0
margin_bottom = 95.0
rect_scale = Vector2( 0.9, 0.9 )
text = "Delete Selected Group"

[node name="Delete Item" type="Button" parent="Group Stuff"]
margin_left = 330.0
margin_top = 100.0
margin_right = 487.0
margin_bottom = 120.0
rect_scale = Vector2( 0.9, 0.9 )
text = "Delete Selected Item"

[node name="Open Movement" type="Button" parent="Group Stuff"]
margin_left = 330.0
margin_top = 125.0
margin_right = 487.0
margin_bottom = 145.0
rect_scale = Vector2( 0.9, 0.9 )
text = "Open Movement"

[node name="ColorRect" type="ColorRect" parent="Group Stuff"]
margin_top = 100.0
margin_right = 330.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="Group Stuff"]
margin_left = 470.0
margin_top = 100.0
margin_right = 800.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 1 )

[node name="Make Group" type="LineEdit" parent="."]
margin_left = 14.0
margin_top = 16.0
margin_right = 114.0
margin_bottom = 40.0
placeholder_text = "Add Group"

[node name="Selected Group" type="RichTextLabel" parent="."]
margin_left = 118.0
margin_top = 12.0
margin_right = 470.0
margin_bottom = 29.0
text = "Selected Group: "

[node name="Selected Items" type="RichTextLabel" parent="."]
margin_left = 119.0
margin_top = 29.0
margin_right = 471.0
margin_bottom = 46.0
text = "Selected Input: "

[node name="Groups" type="ScrollContainer" parent="."]
margin_top = 44.0
margin_right = 800.0
margin_bottom = 69.0
scroll_vertical_enabled = false

[node name="Groups" type="HBoxContainer" parent="Groups"]

[node name="Question" type="LineEdit" parent="."]
margin_left = 15.0
margin_top = 70.0
margin_right = 315.0
margin_bottom = 94.0
align = 1
placeholder_text = "Insert A Question"

[node name="Question Group" type="ScrollContainer" parent="."]
margin_top = 100.0
margin_right = 330.0
margin_bottom = 800.0

[node name="Questions" type="VBoxContainer" parent="Question Group"]

[node name="Answer" type="LineEdit" parent="."]
margin_left = 485.0
margin_top = 70.0
margin_right = 785.0
margin_bottom = 94.0
align = 1
placeholder_text = "Insert A Answer"

[node name="Answer Group" type="ScrollContainer" parent="."]
margin_left = 470.0
margin_top = 100.0
margin_right = 800.0
margin_bottom = 800.0

[node name="Answer" type="VBoxContainer" parent="Answer Group"]

[node name="Movement Dialog" type="WindowDialog" parent="."]
margin_left = 402.0
margin_top = 329.0
margin_right = 602.0
margin_bottom = 529.0
window_title = "Moving Things"

[node name="GroupThing" type="LineEdit" parent="Movement Dialog"]
margin_left = 10.0
margin_top = 25.0
margin_right = 85.0
margin_bottom = 50.0
align = 1
placeholder_text = "Group #"

[node name="ToGroupThing" type="LineEdit" parent="Movement Dialog"]
margin_left = 10.0
margin_top = 75.0
margin_right = 85.0
margin_bottom = 100.0
align = 1
placeholder_text = "Replace"

[node name="Label" type="Label" parent="Movement Dialog"]
margin_left = 10.0
margin_top = 55.0
margin_right = 85.0
margin_bottom = 70.0
text = "To"
align = 1

[node name="Change Group" type="Button" parent="Movement Dialog"]
margin_top = 125.0
margin_right = 101.0
margin_bottom = 145.0
text = "Change Group"

[node name="ItemThing" type="LineEdit" parent="Movement Dialog"]
margin_left = 115.0
margin_top = 25.0
margin_right = 190.0
margin_bottom = 50.0
align = 1
placeholder_text = "Item #"

[node name="ToItemThing" type="LineEdit" parent="Movement Dialog"]
margin_left = 115.0
margin_top = 75.0
margin_right = 190.0
margin_bottom = 100.0
align = 1
placeholder_text = "Replace"

[node name="Label2" type="Label" parent="Movement Dialog"]
margin_left = 115.0
margin_top = 55.0
margin_right = 190.0
margin_bottom = 70.0
text = "To"
align = 1

[node name="Change Item" type="Button" parent="Movement Dialog"]
margin_left = 105.0
margin_top = 125.0
margin_right = 198.0
margin_bottom = 145.0
text = "Change Item"

[connection signal="toggled" from="Saving Stuffs/Checking" to="." method="_on_Checking_toggled"]
[connection signal="pressed" from="Saving Stuffs/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Saving Stuffs/Load" to="." method="_on_Load_pressed"]
[connection signal="file_selected" from="Saving Stuffs/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="Saving Stuffs/FileDialog2" to="." method="_on_FileDialog2_file_selected"]
[connection signal="file_selected" from="Saving Stuffs/DeveloperFile" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="Saving Stuffs/DeveloperFile2" to="." method="_on_FileDialog2_file_selected"]
[connection signal="pressed" from="Saving Stuffs/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Group Stuff/Delete Group" to="." method="_on_Delete_Group_pressed"]
[connection signal="pressed" from="Group Stuff/Delete Item" to="." method="_on_Delete_Item_pressed"]
[connection signal="pressed" from="Group Stuff/Open Movement" to="." method="_on_Open_Movement_pressed"]
[connection signal="text_entered" from="Make Group" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="Question" to="." method="_on_Question_text_entered"]
[connection signal="text_entered" from="Answer" to="." method="_on_Answer_text_entered"]
[connection signal="text_changed" from="Movement Dialog/GroupThing" to="." method="_on_GroupThing_text_changed"]
[connection signal="text_changed" from="Movement Dialog/ToGroupThing" to="." method="_on_ToGroupThing_text_changed"]
[connection signal="pressed" from="Movement Dialog/Change Group" to="." method="_on_Change_Group_pressed"]
[connection signal="text_changed" from="Movement Dialog/ItemThing" to="." method="_on_ItemThing_text_changed"]
[connection signal="text_changed" from="Movement Dialog/ToItemThing" to="." method="_on_ToItemThing_text_changed"]
[connection signal="pressed" from="Movement Dialog/Change Item" to="." method="_on_Change_Item_pressed"]
